<resources>
    <string name="app_name">LoginTarea</string>
    <string name="group_name">Grupo #1: Molina Xavier, Duchi Walter, Lalama Colombia, Solís Alejandro, Ascencio Juan</string>
    <string name="app_title">Preescolar Digital</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="logo_desc">Logo de Preescolar Digital</string>
    <string name="fondo_desc">Fondo de la aplicación</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="acceso_concedido">Acceso Concedido</string>
    <string name="datos_incorrectos">Datos incorrectos</string>
    <string name="sesion">Mantener sesión</string>

    <string name="clear_login_data">Cerrar sesión</string>
    <string name="login_data_cleared">Información de sesión borrada. Inicie sesión de nuevo</string>

    <string name="registro_titulo">Registro de Usuario</string>
    <string name="hint_cedula">Cédula</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_edad">Edad</string>
    <string name="label_nacionalidad">Nacionalidad:</string>
    <string name="label_genero">Género:</string>
    <string name="label_estado_civil">Estado Civil:</string>
    <string name="radio_soltero">Soltero</string>
    <string name="radio_casado">Casado</string>
    <string name="radio_otro">Otro</string>
    <string name="label_fecha_nacimiento">Fecha de Nacimiento:</string>
    <string name="button_seleccionar_fecha">Seleccionar Fecha</string>
    <string name="fecha_no_seleccionada">Ninguna fecha seleccionada</string>
    <string name="label_nivel_ingles">Nivel de Inglés:</string>
    <string name="button_registrar">Registrar</string>
    <string name="button_borrar">Borrar</string>
    <string name="button_cancelar">Cancelar</string>

    <string name="button_cargar">Cargar Datos</string>
    <string name="registro_exitoso">Usuario registrado con éxito</string>
    <string name="datos_guardados_exito">Datos guardados exitosamente en el archivo.</string>
    <string name="error_guardar_datos">Error al guardar los datos: %s</string>
    <string name="error_cargar_datos">Error al cargar los datos: %s</string>
    <string name="datos_no_encontrados">No se encontraron datos guardados.</string>
    <string name="error_formato_datos">Error: El formato de los datos guardados es incorrecto.</string>
    <string name="error_estado_civil">Por favor, seleccione un estado civil.</string>
    <string name="error_fecha_nacimiento">Por favor, seleccione la fecha de nacimiento.</string>
    <string name="dialogo_titulo_datos_registrados">Datos Registrados</string>
    <string name="dialogo_ok">OK</string>
    <string name="dialogo_datos_mensaje_formato">
        Cédula: %1$s\n
        Nombres: %2$s\n
        Apellidos: %3$s\n
        Edad: %4$s\n
        Nacionalidad: %5$s\n
        Género: %6$s\n
        Estado Civil: %7$s\n
        Fecha Nacimiento: %8$s\n
        Nivel Inglés: %9$s estrellas
    </string>

    <string-array name="nacionalidades_array">
        <item>Ecuatoriana</item>
        <item>Colombiana</item>
        <item>Peruana</item>
        <item>Venezolana</item>
        <item>Otra</item>
    </string-array>
    <string-array name="generos_array">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
        <item>Prefiero no decir</item>
    </string-array>

    <string name="dialog_title_acerca_de">Acerca del Grupo</string>
    <string name="titulo_integrantes">Integrantes:</string>
    <string name="lista_integrantes">
        - Molina Xavier\n
        - Duchi Walter\n
        - Lalama Antonieta\n
        - Solis Alejandro\n
        - Ascencio Juan
    </string>
    <string name="descripcion_foto_grupo">Foto del grupo de trabajo</string>
    <string name="dialog_cerrar">Cerrar</string>
    <string name="title_activity_animales">Animales</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Sección de colores -->
    <string name="titulo_colores">¡Aprendamos los Colores!</string>
    <string name="rojo">Rojo</string>
    <string name="azul">Azul</string>
    <string name="amarillo">Amarillo</string>
    <string name="verde">Verde</string>
    <string name="naranja">Naranja</string>
    <string name="morado">Morado</string>
    <string name="rosa">Rosa</string>
    <string name="marron">Marrón</string>
    <string name="negro">Negro</string>
    <string name="blanco">Blanco</string>
    <string name="gris">Gris</string>
    <string name="celeste">Celeste</string>
    <string name="reproducir_todos">Reproducir Todos</string>
    <string name="imagen_color_desc">Imagen representativa del color</string>

    <!-- Sección de números -->
    <string name="titulo_juego_numeros">¡Ordena los Números!</string>
    <string name="racha_inicial">Racha: %d</string>
    <string name="intentos_inicial">Intentos restantes: %d</string>
    <string name="comprobar_boton">Comprobar</string>
    <string name="mensaje_felicitacion">¡Felicidades! Lo has ordenado correctamente.</string>
    <string name="jugar_otra_vez_boton">Jugar otra vez</string>

    <string name="correcto">¡Correcto!</string>
    <string name="incorrecto">Incorrecto.</string>
    <string name="mensaje_juego_terminado_fallo_simple">¡Oh no! Te quedaste sin intentos.\nLa racha se reinicia a 0.</string>

    <!-- Registrar Activity Simplified -->
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>


    <string name="radio_masculino">Masculino</string>
    <string name="radio_femenino">Femenino</string>
    <string name="radio_otro_genero">Otro</string>


    <!-- Error/Success Messages -->
    <string name="error_campo_requerido">Este campo es requerido</string>
    <string name="error_seleccionar_genero">Por favor seleccione su género.</string>
    <string name="error_password_corta">La contraseña debe tener al menos 6 caracteres.</string>

    <string name="registro_exitoso_db">Usuario %1$s registrado exitosamente en la base de datos.</string>
    <string name="error_registro_db">Error al registrar usuario. El nombre de usuario podría ya existir.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>